--- a/pr.css
+++ b/pr.css
@@ -48,7 +48,6 @@ h2{
    margin: 0 auto;
 }
 
-
 .container{
   min-width: 120px;
   margin: 0 auto;
@@ -139,10 +138,193 @@ h6{
   margin-top: 80px;
 }
 
+.partners{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .now{
   display: flex;
   flex-direction: row;
-   gap: 450px;
+  gap: 60px;
 }
 
+.arch{
+margin-left: 350px;
+}
+
+
+
+
+@media (max-width: 768px){
+    h1{
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 96px;
+  padding-bottom: 40px;
+  white-space: nowrap;
+}
+
+p{
+  white-space: nowrap;
+}
+
+h2{
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  white-space: nowrap;
+  font-size: 96px;
+  padding-bottom: 40px;
+}
+
+.title-color{
+  color: #FD665E;
+}
+
+.str{
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
+}
+
+.btn1{
+   background: #FD665E;
+   color: antiquewhite;
+   gap: 10px;
+   top: 8px;
+   right: 32px;
+   bottom: 8px;
+   left: 32px;
+   border-radius: 15px;
+   border-color: #FD665E;
+}
+
+.btn2{
+   display: flex;
+   background: #FD665E;
+   color: antiquewhite;
+   gap: 10px;
+   border-radius: 15px;
+   border-color: #FD665E;
+   margin: 0 auto;
+}
+
+.container{
+  min-width: 120px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.carousel-inner{
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  bottom: 50px;
+}
+
+.skrrrr{
+  display: flex;
+  flex-direction: column;
+}
+
+h3{
+  margin-left: 300px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  white-space: nowrap;
+}
+
+h4{
+  margin-top: 50px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  white-space: nowrap;
+  font-size: 40px;
+}
+
+h5{
+  margin-top: 50px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  white-space: nowrap;
+  font-size: 40px;
+}
+
+h6{
+   margin-top: 50px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-size: 40px;
+  white-space: nowrap;
+  text-align: center;
+}
+
+.dr{
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+}
+
+.t{
+    margin-left: 100px;
+}
+
+.icon{
+    margin-left: 90px;
+    height: 70px;
+    width: 70px;
+}
+
+.koska{
+    height: 30px;
+    width: 40px;
+}
+
+.mcw{
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  gap:20px;
+  justify-content: center;
+}
+
+.prrr{
+  display: flex;
+  justify-content: center; 
+  gap: 450px;
+}
+
+.nov{
+  display: flex;
+  flex-direction: column;
+}
+
+.tap{
+  margin-left: 300px;
+  margin-top: 80px;
+}
+
+.partners{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap ;
+    align-items: center;
+}
+
+.now{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.arch{
+  margin-left: 0px;
+}
+}
 
